--- a/index.html
+++ b/index.html
@@ -95,6 +95,39 @@
             <p>UI Designer</p>
           </li>
         </ul>
+          <h2>Our Portfolio<h2>
+          <ul>
+            <li>
+              <img src="./images/portfolio1.jpg" alt="Banking App" width="360" /> 
+              <h3>Banking App</h3>
+              <p>App</p>
+            </li>
+            <li>
+              <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360" />
+              <h3>Cashless Payment</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img src="./images/portfolio3.jpg" alt="Meditation App" width="360" />
+              <h3>Meditation App</h3>
+              <p>App</p>
+            </li>
+            <li>
+              <img src="./images/portfolio4.jpg" alt="Taxi Service" width="360" />
+              <h3>Taxi Service</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img src="./images/portfolio5.jpg" alt="Screen Illustrations" width="360" />
+              <h3>Screen Illustrations</h3>
+              <p>Design</p>
+            </li>
+            <li>
+              <img src="./images/portfolio6.jpg" alt="Online Courses" width="360" />
+              <h3>Online Courses</h3>
+              <p>Marketing</p>
+            </li>
+          </ul>
       </section>
     </main>
     <footer>
