--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html" target="_blank"> WebStudio</a>
+        <a href="./index.html" target="_blank"> 
+        <img src="./images/logo1.jpg" alt="WebStudio" width="115" />
+        </a>
         <ul>
           <li><a href="#studio">Studio</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
@@ -16,7 +22,7 @@
         </ul>
       </nav>
 
-      <h2 id="contacts">Contacts</h2>
+      <h2 id="contacts"> </h2>
 
       <address>
         <ul>
@@ -28,16 +34,15 @@
       </address>
     </header>
     <main>
-      <section>
+      <section class="one">
         <h1 id="studio">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
-      <section>
-        <h2>Features</h2>
+      <section class="two">
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3>Strategy </h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -67,7 +72,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="three">
         <h2 id="portfolio">Our Team</h2>
         <ul>
           <li>
@@ -97,7 +102,8 @@
         </ul>
           <h2>Our Portfolio<h2>
           <ul>
-            
+        </section>
+          <ul>
             <li>
               <img src="./images/portfolio1.jpg" alt="Banking App" width="360" /> 
               <h3>Banking App</h3>
@@ -128,12 +134,12 @@
               <h3>Online Courses</h3>
               <p>Marketing</p>
             </li>
-
           </ul>
-      </section>
     </main>
     <footer>
-      <a href="/" target="_blank"> WebStudio</a>
+      <a href="./index.html" target="_blank" > 
+      <img src="./images/logo1.jpg" alt="WebStudio" width="115" />
+      </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
