--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html" target="_blank"> 
-        <img src="./images/logo1.jpg" alt="WebStudio" width="115" />
+        <a href="./index.html">
+          <img src="./images/logo1.jpg" alt="WebStudio" width="115" />
         </a>
         <ul>
           <li><a href="#studio">Studio</a></li>
@@ -22,7 +25,7 @@
         </ul>
       </nav>
 
-      <h2 id="contacts"> </h2>
+      <div id="contacts"></div>
 
       <address>
         <ul>
@@ -42,7 +45,7 @@
       <section class="two">
         <ul>
           <li>
-            <h3>Strategy </h3>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -100,46 +103,63 @@
             <p>UI Designer</p>
           </li>
         </ul>
-          <h2>Our Portfolio<h2>
-          <ul>
-        </section>
-          <ul>
-            <li>
-              <img src="./images/portfolio1.jpg" alt="Banking App" width="360" /> 
-              <h3>Banking App</h3>
-              <p>App</p>
-            </li>
-            <li>
-              <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360" />
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
-            </li>
-            <li>
-              <img src="./images/portfolio3.jpg" alt="Meditation App" width="360" />
-              <h3>Meditation App</h3>
-              <p>App</p>
-            </li>
-            <li>
-              <img src="./images/portfolio4.jpg" alt="Taxi Service" width="360" />
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
-            </li>
-            <li>
-              <img src="./images/portfolio5.jpg" alt="Screen Illustrations" width="360" />
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
-            </li>
-            <li>
-              <img src="./images/portfolio6.jpg" alt="Online Courses" width="360" />
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
-            </li>
-          </ul>
+      </section>
+      <div class="four">
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/portfolio1.jpg" alt="Banking App" width="360" />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio2.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio3.jpg"
+              alt="Meditation App"
+              width="360"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/portfolio4.jpg" alt="Taxi Service" width="360" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio5.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio6.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </div>
     </main>
-    <footer>
-      <a href="./index.html" target="_blank" > 
-      <img src="./images/logo1.jpg" alt="WebStudio" width="115" />
-      </a>
+    <footer class="foot-style">
+      <a href="./index.html" class="logo"
+        >Web<span class="logo-color">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
