--- a/index.html
+++ b/index.html
@@ -7,68 +7,95 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./goit-markup-hw-02/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">
-          <img src="./images/logo1.jpg" alt="WebStudio" width="115" />
+        <a href="./index.html" class="logo">
+          Web<span class="logo-text">Studio</span>
         </a>
-        <ul>
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+        <ul class="nav-list">
+          <li><a href="./index.html" class="nav-link">Studio</a></li>
+          <li><a href="" class="nav-link">Portfolio</a></li>
+          <li><a href="" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
 
       <div id="contacts"></div>
 
-      <address>
+      <address class="contacts-list">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contacts-link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="tel:+110001111111" class="contacts-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
       <section class="one">
-        <h1 id="studio">Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 id="studio" class="one-name">
+          Effective Solutions for Your Business
+        </h1>
+        <button type="button" class="one-type">Order Service</button>
       </section>
 
       <section class="two">
+        <h2><p class="zero"></p></h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3>
+              <p class="two-name"></p>
+              Strategy
+            </h3>
+            <p class="two-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3>
+              <p class="two-name"></p>
+              Punctuality
+            </h3>
+            <p class="two-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3>
+              <p class="two-name"></p>
+              Diligence
+            </h3>
+            <p class="two-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3>
+              <p class="two-name"></p>
+              Technologies
+            </h3>
+            <p class="two-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -76,42 +103,54 @@
         </ul>
       </section>
 
-      <section class="three">
-        <h2 id="portfolio">Our Team</h2>
+      <section tion class="three">
+        <h2 id="portfolio" class="three-name">Our Team</h2>
         <ul>
-          <li>
+          <li class="three-text">
             <img src="./images/img1.jpg" alt="Mark Guerrero" width="264" />
 
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3>
+              <p class="three-h3"></p>
+              Mark Guerrero
+            </h3>
+            <p class="three-p">Product Designer</p>
           </li>
-          <li>
+          <li class="three-text">
             <img src="./images/img2.jpg" alt="Tom Ford" width="264" />
 
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3>
+              <p class="three-h3"></p>
+              Tom Ford
+            </h3>
+            <p class="three-p">Frontend Developer</p>
           </li>
-          <li>
+          <li class="three-text">
             <img src="./images/img3.jpg" alt="Camila Garcia" width="264" />
 
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3>
+              <p class="three-h3"></p>
+              Camila Garcia
+            </h3>
+            <p class="three-p">Marketing</p>
           </li>
-          <li>
+          <li class="three-text">
             <img src="./images/img4.jpg" alt="Daniel Wilson" width="264" />
 
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3>
+              <p class="three-h3"></p>
+              Daniel Wilson
+            </h3>
+            <p class="three-p">UI Designer</p>
           </li>
         </ul>
       </section>
       <div class="four">
-        <h2>Our Portfolio</h2>
+        <h2 class="four-h2">Our Portfolio</h2>
         <ul>
           <li>
             <img src="./images/portfolio1.jpg" alt="Banking App" width="360" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="four-name">Banking App</h3>
+            <p class="four-p">App</p>
           </li>
           <li>
             <img
@@ -119,8 +158,8 @@
               alt="Cashless Payment"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="four-name">Cashless Payment</h3>
+            <p class="four-p">Marketing</p>
           </li>
           <li>
             <img
@@ -128,13 +167,13 @@
               alt="Meditation App"
               width="360"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="four-name">Meditation App</h3>
+            <p class="four-p">App</p>
           </li>
           <li>
             <img src="./images/portfolio4.jpg" alt="Taxi Service" width="360" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="four-name">Taxi Service</h3>
+            <p class="four-p">Marketing</p>
           </li>
           <li>
             <img
@@ -142,8 +181,8 @@
               alt="Screen Illustrations"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="four-name">Screen Illustrations</h3>
+            <p class="four-p">Design</p>
           </li>
           <li>
             <img
@@ -151,8 +190,8 @@
               alt="Online Courses"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="four-name">Online Courses</h3>
+            <p class="four-p">Marketing</p>
           </li>
         </ul>
       </div>
@@ -162,7 +201,7 @@
       <a href="./index.html" class="logo"
         >Web<span class="logo-color">Studio</span></a
       >
-      <p>
+      <p class="foot-p">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
