--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
         <h2><p class="zero"></p></h2>
         <ul>
           <li>
-            <h3>
-              <p class="two-name"></p>
-              Strategy
-            </h3>
+            <h3 class="two-name">Strategy</h3>
             <p class="two-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -108,11 +105,7 @@
         <ul>
           <li class="three-text">
             <img src="./images/img1.jpg" alt="Mark Guerrero" width="264" />
-
-            <h3>
-              <p class="three-h3"></p>
-              Mark Guerrero
-            </h3>
+            <h3 class="three-h3">Mark Guerrero</h3>
             <p class="three-p">Product Designer</p>
           </li>
           <li class="three-text">
