--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./goit-markup-hw-02/styles.css" />
+    <link rel="stylesheet" href="goit-markup-hw-02/styles.css" />
   </head>
   <body>
     <header>
@@ -58,7 +58,7 @@
       </section>
 
       <section class="two">
-        <h2><p class="zero"></p></h2>
+        <h2 class="zero"></h2>
         <ul>
           <li>
             <h3 class="two-name">Strategy</h3>
@@ -68,30 +68,21 @@
             </p>
           </li>
           <li>
-            <h3>
-              <p class="two-name"></p>
-              Punctuality
-            </h3>
+            <h3 class="two-name">Punctuality</h3>
             <p class="two-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>
-              <p class="two-name"></p>
-              Diligence
-            </h3>
+            <h3 class="two-name">Diligence</h3>
             <p class="two-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>
-              <p class="two-name"></p>
-              Technologies
-            </h3>
+            <h3 class="two-name">Technologies</h3>
             <p class="two-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -100,7 +91,7 @@
         </ul>
       </section>
 
-      <section tion class="three">
+      <section class="three">
         <h2 id="portfolio" class="three-name">Our Team</h2>
         <ul>
           <li class="three-text">
@@ -110,41 +101,28 @@
           </li>
           <li class="three-text">
             <img src="./images/img2.jpg" alt="Tom Ford" width="264" />
-
-            <h3>
-              <p class="three-h3"></p>
-              Tom Ford
-            </h3>
+            <h3 class="three-h3">Tom Ford</h3>
             <p class="three-p">Frontend Developer</p>
           </li>
           <li class="three-text">
             <img src="./images/img3.jpg" alt="Camila Garcia" width="264" />
-
-            <h3>
-              <p class="three-h3"></p>
-              Camila Garcia
-            </h3>
+            <h3 class="three-h3">Camila Garcia</h3>
             <p class="three-p">Marketing</p>
           </li>
           <li class="three-text">
             <img src="./images/img4.jpg" alt="Daniel Wilson" width="264" />
-
-            <h3>
-              <p class="three-h3"></p>
-              Daniel Wilson
-            </h3>
-
+            <h3 class="three-h3">Daniel Wilson</h3>
             <p class="three-p">UI Designer</p>
           </li>
         </ul>
       </section>
-      <div class="four">
-        <h2 class="four-h2">Our Portfolio</h2>
+      <section class="four">
+        <h2 class="three-name">Our Portfolio</h2>
         <ul>
           <li>
             <img src="./images/portfolio1.jpg" alt="Banking App" width="360" />
-            <h3 class="four-name">Banking App</h3>
-            <p class="four-p">App</p>
+            <h3 class="three-h3">Banking App</h3>
+            <p class="three-p">App</p>
           </li>
           <li>
             <img
@@ -152,8 +130,8 @@
               alt="Cashless Payment"
               width="360"
             />
-            <h3 class="four-name">Cashless Payment</h3>
-            <p class="four-p">Marketing</p>
+            <h3 class="three-h3">Cashless Payment</h3>
+            <p class="three-p">Marketing</p>
           </li>
           <li>
             <img
@@ -161,13 +139,13 @@
               alt="Meditation App"
               width="360"
             />
-            <h3 class="four-name">Meditation App</h3>
-            <p class="four-p">App</p>
+            <h3 class="three-h3">Meditation App</h3>
+            <p class="three-p">App</p>
           </li>
           <li>
             <img src="./images/portfolio4.jpg" alt="Taxi Service" width="360" />
-            <h3 class="four-name">Taxi Service</h3>
-            <p class="four-p">Marketing</p>
+            <h3 class="three-h3">Taxi Service</h3>
+            <p class="three-p">Marketing</p>
           </li>
           <li>
             <img
@@ -175,8 +153,8 @@
               alt="Screen Illustrations"
               width="360"
             />
-            <h3 class="four-name">Screen Illustrations</h3>
-            <p class="four-p">Design</p>
+            <h3 class="three-h3">Screen Illustrations</h3>
+            <p class="three-p">Design</p>
           </li>
           <li>
             <img
@@ -184,11 +162,11 @@
               alt="Online Courses"
               width="360"
             />
-            <h3 class="four-name">Online Courses</h3>
-            <p class="four-p">Marketing</p>
+            <h3 class="three-h3">Online Courses</h3>
+            <p class="three-p">Marketing</p>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
 
     <footer class="foot-style">
