--- a/index.html
+++ b/index.html
@@ -96,74 +96,80 @@
         <ul>
           <li class="three-text">
             <img src="./images/img1.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="three-h3">Mark Guerrero</h3>
-            <p class="three-p">Product Designer</p>
+            <h3 class="two-name">Mark Guerrero</h3>
+            <p class="two-text">Product Designer</p>
           </li>
           <li class="three-text">
             <img src="./images/img2.jpg" alt="Tom Ford" width="264" />
-            <h3 class="three-h3">Tom Ford</h3>
-            <p class="three-p">Frontend Developer</p>
+            <h3 class="two-name">Tom Ford</h3>
+            <p class="two-text">Frontend Developer</p>
           </li>
           <li class="three-text">
             <img src="./images/img3.jpg" alt="Camila Garcia" width="264" />
-            <h3 class="three-h3">Camila Garcia</h3>
-            <p class="three-p">Marketing</p>
+            <h3 class="two-name">Camila Garcia</h3>
+            <p class="two-text">Marketing</p>
           </li>
           <li class="three-text">
             <img src="./images/img4.jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="three-h3">Daniel Wilson</h3>
-            <p class="three-p">UI Designer</p>
+            <h3 class="two-name">Daniel Wilson</h3>
+            <p class="two-text">UI Designer</p>
           </li>
         </ul>
       </section>
       <section class="four">
         <h2 class="three-name">Our Portfolio</h2>
+
         <ul>
           <li>
             <img src="./images/portfolio1.jpg" alt="Banking App" width="360" />
-            <h3 class="three-h3">Banking App</h3>
-            <p class="three-p">App</p>
+            <h3 class="two-name">Banking App</h3>
+            <p class="two-text">App</p>
           </li>
+
           <li>
             <img
               src="./images/portfolio2.jpg"
               alt="Cashless Payment"
               width="360"
             />
-            <h3 class="three-h3">Cashless Payment</h3>
-            <p class="three-p">Marketing</p>
+            <h3 class="two-name">Cashless Payment</h3>
+            <p class="two-text">Marketing</p>
           </li>
+
           <li>
             <img
               src="./images/portfolio3.jpg"
               alt="Meditation App"
               width="360"
             />
-            <h3 class="three-h3">Meditation App</h3>
-            <p class="three-p">App</p>
+            <h3 class="two-name">Meditation App</h3>
+            <p class="two-text">App</p>
           </li>
+
           <li>
             <img src="./images/portfolio4.jpg" alt="Taxi Service" width="360" />
-            <h3 class="three-h3">Taxi Service</h3>
-            <p class="three-p">Marketing</p>
+            <h3 class="two-name">Taxi Service</h3>
+            <p class="two-text">Marketing</p>
           </li>
+
           <li>
             <img
               src="./images/portfolio5.jpg"
               alt="Screen Illustrations"
               width="360"
             />
-            <h3 class="three-h3">Screen Illustrations</h3>
-            <p class="three-p">Design</p>
+            <h3 class="two-name">Screen Illustrations</h3>
+            <p class="two-text">Design</p>
           </li>
+
           <li>
             <img
               src="./images/portfolio6.jpg"
               alt="Online Courses"
               width="360"
             />
-            <h3 class="three-h3">Online Courses</h3>
-            <p class="three-p">Marketing</p>
+            <h3 class="two-name">Online Courses</h3>
+            <p class="two-text">Marketing</p>
           </li>
         </ul>
       </section>
